--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
   <h1>به سایت من خوش آمدید</h1>
   <nav>
-    <a href="F:/html/behrad/about.html" target="_blank">درباره من</a>
-    <a href="F:/html/behrad/games.html" target="_blank">بازی‌ها</a>
+    <a href="about.html" target="_blank">درباره من</a>
+    <a href="games.html" target="_blank">بازی‌ها</a>
   </nav>
 </body>
+
 </html>
