--- a/admin.html
+++ b/admin.html
@@ -8,6 +8,7 @@
     input, button { margin: 5px; padding: 5px; }
     #games-list { margin-top: 20px; }
   </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>پنل مدیریت بازی‌ها</h2>
@@ -82,4 +83,5 @@
     }
   </script>
 </body>
+
 </html>
