--- a/admin.html
+++ b/admin.html
@@ -8,13 +8,12 @@
     input, button { margin: 5px; padding: 5px; }
     #games-list { margin-top: 20px; }
   </style>
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>پنل مدیریت بازی‌ها</h2>
 
   <label>نام بازی: <input type="text" id="gameName"></label><br>
-  <label>امتیاز: <input type="number" id="gameScore"></label><br>
+  <label>امتیاز بازی: <input type="number" id="gameScore"></label><br>
   <button onclick="saveGame()">ذخیره بازی</button>
 
   <h3>لیست بازی‌ها</h3>
@@ -83,5 +82,4 @@
     }
   </script>
 </body>
-
 </html>
