--- a/admin.html
+++ b/admin.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>ذخیره فایل بازی</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>افزودن بازی</h2>
@@ -84,3 +85,4 @@
   </script>
 </body>
 </html>
+
