--- a/admin.html
+++ b/admin.html
@@ -2,14 +2,14 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>ذخیره فایل بازی</title>
+  <title>مدیریت بازی‌ها</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>افزودن بازی</h2>
 
   <label>نام بازی: <input type="text" id="gameName"></label><br>
-  <label>انتخاب فایل: <input type="file" id="gameFile"></label><br>
+  <label>امتیاز بازی: <input type="number" id="gameScore"></label><br>
   <button onclick="saveGame()">ذخیره بازی</button>
 
   <h3>لیست بازی‌ها</h3>
@@ -17,7 +17,7 @@
 
   <script>
     let db;
-    let request = indexedDB.open("GamesDB", 2);
+    let request = indexedDB.open("GamesDB", 1);
 
     request.onupgradeneeded = function(e) {
       db = e.target.result;
@@ -33,26 +33,21 @@
 
     function saveGame() {
       let name = document.getElementById("gameName").value;
-      let fileInput = document.getElementById("gameFile");
-      let file = fileInput.files[0];
+      let score = parseInt(document.getElementById("gameScore").value);
 
-      if (!name || !file) {
-        alert("لطفاً نام بازی و فایل را وارد کنید");
+      if (!name || isNaN(score)) {
+        alert("لطفاً نام و امتیاز بازی را وارد کنید");
         return;
       }
 
-      let reader = new FileReader();
-      reader.onload = function() {
-        let transaction = db.transaction(["games"], "readwrite");
-        let store = transaction.objectStore("games");
-        store.add({ name: name, fileData: reader.result });
+      let transaction = db.transaction(["games"], "readwrite");
+      let store = transaction.objectStore("games");
+      store.add({ name: name, score: score });
 
-        transaction.oncomplete = function() {
-          alert("✅ بازی ذخیره شد");
-          loadGames();
-        };
+      transaction.oncomplete = function() {
+        alert("✅ بازی ذخیره شد");
+        loadGames();
       };
-      reader.readAsDataURL(file); // فایل به صورت Base64 ذخیره می‌شود
     }
 
     function loadGames() {
@@ -67,16 +62,7 @@
         let cursor = e.target.result;
         if (cursor) {
           let li = document.createElement("li");
-          li.textContent = cursor.value.name;
-
-          // اگر فایل تصویر بود، نمایش بده
-          if (cursor.value.fileData.startsWith("data:image")) {
-            let img = document.createElement("img");
-            img.src = cursor.value.fileData;
-            img.style.maxWidth = "100px";
-            li.appendChild(img);
-          }
-
+          li.textContent = cursor.value.name + " - امتیاز: " + cursor.value.score;
           list.appendChild(li);
           cursor.continue();
         }
@@ -85,4 +71,3 @@
   </script>
 </body>
 </html>
-
