--- a/admin.html
+++ b/admin.html
@@ -3,13 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>مدیریت بازی‌ها</title>
-  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>افزودن بازی</h2>
 
   <label>نام بازی: <input type="text" id="gameName"></label><br>
-  <label>امتیاز بازی: <input type="number" id="gameScore"></label><br>
+  <label>انتخاب فایل: <input type="file" id="gameFile"></label><br>
   <button onclick="saveGame()">ذخیره بازی</button>
 
   <h3>لیست بازی‌ها</h3>
@@ -17,7 +16,7 @@
 
   <script>
     let db;
-    let request = indexedDB.open("GamesDB", 1);
+    let request = indexedDB.open("GamesDB", 3);
 
     request.onupgradeneeded = function(e) {
       db = e.target.result;
@@ -33,21 +32,26 @@
 
     function saveGame() {
       let name = document.getElementById("gameName").value;
-      let score = parseInt(document.getElementById("gameScore").value);
+      let fileInput = document.getElementById("gameFile");
+      let file = fileInput.files[0];
 
-      if (!name || isNaN(score)) {
-        alert("لطفاً نام و امتیاز بازی را وارد کنید");
+      if (!name || !file) {
+        alert("لطفاً نام بازی و فایل را وارد کنید");
         return;
       }
 
-      let transaction = db.transaction(["games"], "readwrite");
-      let store = transaction.objectStore("games");
-      store.add({ name: name, score: score });
+      let reader = new FileReader();
+      reader.onload = function() {
+        let transaction = db.transaction(["games"], "readwrite");
+        let store = transaction.objectStore("games");
+        store.add({ name: name, fileData: reader.result });
 
-      transaction.oncomplete = function() {
-        alert("✅ بازی ذخیره شد");
-        loadGames();
+        transaction.oncomplete = function() {
+          alert("✅ بازی ذخیره شد");
+          loadGames();
+        };
       };
+      reader.readAsDataURL(file); // فایل به صورت Base64 ذخیره می‌شود
     }
 
     function loadGames() {
@@ -62,7 +66,23 @@
         let cursor = e.target.result;
         if (cursor) {
           let li = document.createElement("li");
-          li.textContent = cursor.value.name + " - امتیاز: " + cursor.value.score;
+          li.textContent = cursor.value.name;
+
+          // اگر فایل تصویر بود، نمایش بده
+          if (cursor.value.fileData.startsWith("data:image")) {
+            let img = document.createElement("img");
+            img.src = cursor.value.fileData;
+            img.style.maxWidth = "100px";
+            li.appendChild(img);
+          }
+
+          // اگر فایل متن بود، نمایش بده
+          if (cursor.value.fileData.startsWith("data:text")) {
+            let p = document.createElement("p");
+            p.textContent = cursor.value.fileData.substring(0, 100) + "...";
+            li.appendChild(p);
+          }
+
           list.appendChild(li);
           cursor.continue();
         }
