--- a/games.html
+++ b/games.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>لیست بازی‌ها</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h2>لیست بازی‌ها</h2>
@@ -51,3 +52,4 @@
   </script>
 </body>
 </html>
+
